# agent-voyager-project

./: .gitignore  AEP_PARTNER_MEMO.md  AGENTS.md  AGENT_EXECUTION_PROTOCOL.md  CLAUDE.md  CONFORMANCE_PLAN.md  FOUNDATIONS.md  MAINTAINERS.md  MCP_PLAN.md  Makefile  PATTERNS.md  PROTOCOL_TODOS.md  README.md  REVIEW.md  SKILL.md  TESTING.md  TODO.md  index.html  pyproject.toml  ruff.toml
agents/avp-claude-agent-sdk/python/: README.md  avp-conformance.json  pyproject.toml
agents/avp-claude-agent-sdk/python/tests/: test_emit.py  test_patches.py
agents/avp-goose/rust/: Cargo.toml  DESIGN.md  TECH_DEBT.md  avp-conformance.json  build.rs
agents/avp-goose/rust/examples/: cross_provider.rs  tiny.rs
agents/avp-goose/rust/src/: commission.rs  emit.rs  events.rs  lib.rs  runner.rs  runstate.rs  testkit.rs
agents/avp-goose/rust/tests/: band1.rs  band2.rs  conformance.rs  describe_hermetic.rs  golden.rs  live_mcp.rs  live_subagent.rs  mcp_connect.rs
avp-cli/: EVAL-FORMAT.md  README.md  eval.schema.json  hatch_build.py  pyproject.toml
avp-cli/examples/browsecomp/: README.md  browsecomp-claude.commission.json  browsecomp.eval.json  decrypt_browsecomp.py
avp-cli/examples/browsecomp/search-compare/: README.md  browsecomp-exa.commission.json  browsecomp-linkup.commission.json  browsecomp-search-compare.eval.json  web-search-env.json
avp-cli/examples/coding/: README.md  coding.eval.json
avp-cli/examples/environments/: coding-project.json  python-six.json
avp-cli/examples/environments/project/: main.py
avp-cli/examples/goose-local-model-eval/: README.md  env.json  goose-local.commission.json  gsm8k-local.commission.json  gsm8k.eval.json  local-model.eval.json  markets-data.json  orders.csv
avp-cli/examples/nuke/: .gitignore  Dockerfile.codemode  README.md  make_nuke.py  nuke-baseline.commission.json  nuke-codemode.commission.json  nuke.eval.json  pctx.json  run.sh  setup.sh  sheets_mcp.py  verify_nuke.py
avp-cli/examples/onboarding/: .gitignore  README.md  build_commissions.py  onboarding.eval.json
avp-cli/src/avp_cli/: __init__.py  agent.py  agent_install.py  agent_manifest.py  agents.py  brand.py  broker.py  cli.py  commission.py  config.py  console.py  environment.py  images.py  library.py  live.py  local_models.py  observability.py  onboarding.py  osb.py  paths.py  run_manifest.py  runtime.py  sandbox.py  state.py  vault.py  viz.py
avp-cli/src/avp_cli/catalog/: __init__.py  capitals.json  custom.json  demo.json  parsebench.json
avp-cli/src/avp_cli/eval/: dataset.py  engine.py  format.py  report.py  scoring.py  setup.py  template.py
avp-cli/tests/: fakebox.py  test_agent_describe.py  test_agent_install.py  test_commission_create.py  test_config.py  test_docker_seam.py  test_environment.py  test_environment_smoke.py  test_eval_engine.py  test_library.py  test_local_models.py  test_observability.py  test_onboarding.py  test_osb.py  test_run_manifest.py  test_run_task.py  test_sandbox.py  test_state.py  test_template.py  test_vault.py  test_viz.py
avp/bindings/python/: CLAUDE.md  README.md  pyproject.toml
avp/bindings/python/tests/: test_pricing.py
avp/core/conformance/: pyproject.toml
avp/core/conformance/tests/: test_conformance_dispatch.py  test_conformance_match.py
python/: pyproject.toml  ruff.toml
python/aep/: README.md  pyproject.toml
python/aep/src/aep/: __init__.py  enums.py  io.py  (+3 more)
python/aep/tests/: test_agent_stopped_alias_equivalence.py  test_approval_source.py  test_boundary_duration.py  test_boundary_preemption.py  test_conformance_suite.py  test_embedded_runner.py  test_interop.py  test_local_tools.py  test_mcp_lifecycle.py  test_parse.py  test_pre_tool_verifier.py  test_pricing.py  test_reasoning_emitted.py  test_refusal.py  test_server_tool_events.py  test_subagent.py  test_subagent_dispatch.py  test_tracer.py  test_verifier_on_success.py
python/agent-execution-protocol/: README.md  pyproject.toml
python/agent-execution-protocol/agent_execution_protocol/: __init__.py  config.py  events.py  stream.py  validate.py
python/agent-execution-protocol/tests/: test_config.py  test_events.py  test_stream.py  test_validate.py
python/agents/avp-anthropic/: README.md  pyproject.toml
python/agents/avp-claude-agent/: CONFORMANCE.md  README.md  pyproject.toml
python/agents/avp-claude-agent-sdk/: AVP_PLAN.md  CLAUDE.md  README.md  TRAJECTORY_CHECKLIST.md  avp-conformance.json  out.jsonl  pyproject.toml
python/agents/avp-claude-agent-v0/: pyproject.toml
python/agents/avp-ollama/: README.md  pyproject.toml
python/agents/avp-openai-agent/: README.md  pyproject.toml
python/avp/: CLAUDE.md  README.md  pyproject.toml
python/avp/tests/: test_agent_stopped_alias_equivalence.py  test_conformance_dispatch.py  test_conformance_match.py  test_conformance_suite.py  test_embedded_runner.py  test_interop.py  test_local_tools.py  test_mcp_lifecycle.py  test_parse.py  test_pricing.py  test_reasoning_emitted.py  test_refusal.py  test_server_tool_events.py  test_subagent.py  test_subagent_dispatch.py  test_tracer.py
python/examples/agents/: code_summarizer.py  skill_demo.py  tool_call_eval.py
python/runners/aep-anthropic/: README.md  pyproject.toml
python/runners/aep-claude-agent/: README.md  pyproject.toml
python/runners/anthropic-sdk/: pyproject.toml
python/runners/claude-agent-sdk/: pyproject.toml
python/sdks/avp-anthropic/: README.md  pyproject.toml
python/supervisors/simple-supervisor-example/: README.md  WALKTHROUGH.md  pyproject.toml
rust/aep/: Cargo.toml  README.md
rust/aep/src/: config.rs  event.rs  lib.rs  supervisor_message.rs
rust/aep/tests/: roundtrip.rs
rust/avp/: Cargo.toml  README.md
rust/avp-goose/: Cargo.toml  DESIGN.md  TECH_DEBT.md
rust/avp-goose/src/: commission.rs  emit.rs  events.rs  provider_tap.rs  runner.rs  runstate.rs  translate.rs
rust/avp-goose/tests/: band1.rs  band2.rs  conformance.rs  coverage.rs  live.rs  live_mcp.rs  live_skills.rs  pipeline.rs
rust/avp/src/: agent_descriptor.rs  commission.rs  event.rs  ids.rs  lib.rs  pricing.rs  sink.rs  trajectory.rs
rust/avp/tests/: roundtrip.rs
(+569 files in other folders)
