# Top-level workspace metadata. NOT a publishable package.
#
# Each member under python/ has its own pyproject.toml and ships independently
# (via `cd python/<pkg> && uv build && uv publish` or any other tool). This file
# only exists to make local development ergonomic: `uv sync` from the repo root
# installs all four packages editably and resolves cross-package deps to the
# local sources rather than PyPI.

[project]
name = "avp-workspace"
version = "0.0.0"
description = "Workspace root for the AVP repo. Not published."
requires-python = ">=3.11"
# Listing the members here is what makes `uv sync` install them.
# Workspace membership alone makes them resolvable but not installed.
dependencies = [
    "avp",
    "avp-anthropic",
    "avp-claude-agent",
    "simple-supervisor-example",
]

[dependency-groups]
dev = [
    "pytest>=7",
    "ruff>=0.6",
]

[tool.uv.workspace]
members = [
    "python/avp",
    "python/agents/avp-anthropic",
    "python/agents/avp-claude-agent",
    "python/supervisors/simple-supervisor-example",
]

# When any workspace member declares `avp`, `avp-anthropic`, etc. as a
# dependency, resolve it from the workspace rather than PyPI. Critical:
# there's an unrelated package on PyPI named `avp` (security tooling), and
# without this override `pip install` would pull it down on a fresh machine.
[tool.uv.sources]
avp                       = { workspace = true }
avp-anthropic             = { workspace = true }
avp-claude-agent          = { workspace = true }
simple-supervisor-example = { workspace = true }

[tool.uv]
# Don't try to package the workspace root itself — there's no source code here.
package = false
