[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "avp-cli"
version = "0.1.0"
description = "The local AVP CLI (`avp`). Build, run, and iterate on Commissions: scaffold a Commission, compare setups (Commission variants) over a dataset against a real agent, and rank a board by accuracy / pass-rate / cost / turns."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
# avp-conformance ships the AgentManifest model + the run-an-agent contract this
# tool drives (`run --commission --out`); avp ships the wire types; rich is the
# developer-facing output layer.
dependencies = ["avp==0.1.0", "avp-conformance==0.1.0", "rich>=13", "questionary>=2"]

[project.optional-dependencies]
claude-agent = ["avp-claude-agent-sdk==0.1.0"]
# Capabilities a benchmark config can require: `huggingface` to load HF datasets,
# `parsebench` for the ParseBench fidelity scorer (rapidfuzz). The CLI checks for
# these at run time and tells the user which extra to install.
huggingface = ["datasets>=3"]
parsebench = ["datasets>=3", "rapidfuzz>=3"]
dev = ["pytest>=7", "ruff>=0.6"]

[project.scripts]
avp = "avp_cli.cli:main"

[project.urls]
Spec = "https://github.com/portofcontext/agent-voyager-project/tree/main/spec/v0.1"

[tool.hatch.build.targets.wheel]
packages = ["src/avp_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
