[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "avp-cli"
version = "0.1.3"
description = "The local AVP CLI (`avp`). Build, run, and iterate on Commissions: scaffold a Commission, compare setups (Commission variants) over a dataset against a real agent, and rank a board by accuracy / pass-rate / cost / turns."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
# The `avp` wire types are VENDORED into this wheel (see hatch_build.py), so
# `avp-cli` is the single published distribution and the only thing a user
# installs; pydantic is the wire types' one runtime requirement, carried here.
# The CLI owns its own agent-manifest model (avp_cli.agent_manifest), so it does
# not depend on the conformance harness. rich/questionary are the developer-facing
# output layer; httpx powers the vault broker; opensandbox/opensandbox-server are
# the sandbox engine (containers via a CLI-managed local control plane), pinned
# exactly and bumped together (the project warns of SDK/server version-skew
# breakage on nullable fields).
dependencies = [
    "pydantic>=2.6,<3",
    "rich>=13",
    "questionary>=2",
    "httpx>=0.27",
    "opensandbox==0.1.9",
    "opensandbox-server==0.1.14",
]

[project.optional-dependencies]
# Capabilities a benchmark config can require: `huggingface` to load HF datasets,
# `parsebench` for the ParseBench fidelity scorer (rapidfuzz), `llm-judge` for the
# grader-model scorer (anthropic). The CLI checks for these at run time and tells
# the user which extra to install.
huggingface = ["datasets>=3"]
parsebench = ["datasets>=3", "rapidfuzz>=3"]
llm-judge = ["anthropic>=0.40"]
dev = ["pytest>=7", "ruff>=0.6"]

[project.scripts]
avp = "avp_cli.cli:main"

[project.urls]
Spec = "https://github.com/portofcontext/agent-voyager-project/tree/main/spec/v0.1"

[tool.hatch.build.targets.wheel]
packages = ["src/avp_cli"]
# Vendor the sibling workspace sources (`avp` wire types, `avp_conformance`
# harness) into the STANDALONE wheel so `avp-cli` is the only distribution we
# publish to PyPI. The vendoring is done by hatch_build.py for `standard` builds
# only; it is a no-op for `editable` builds so a workspace `uv sync` keeps
# importing the live source under avp/ rather than a stale copied snapshot. These
# trees stay separate workspace members for local dev and for the GitHub-release
# agent wheels; they are simply not published to PyPI on their own.
[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "docker: needs a running Docker daemon (the real-sandbox seam tests; `make test-docker`)",
]
