# Python workspace metadata. NOT a publishable package.
#
# AVP is a multi-language repo (specs in spec/, Python in python/, Rust in
# rust/, TypeScript in typescript/). The Python workspace root lives HERE so
# the repo root stays language-agnostic.
#
# Each member has its own pyproject.toml and ships independently (via
# `cd python/<pkg> && uv build && uv publish` or any other tool). This file
# only exists to make local development ergonomic: `uv sync` (from python/, or
# `uv --directory python sync` from repo root) installs all four packages
# editably and resolves cross-package deps to local sources rather than PyPI.
# `make sync` from the repo root is the simplest entry point.

[project]
name = "avp-workspace"
version = "0.0.0"
description = "Python workspace root for the AVP repo. Not published."
requires-python = ">=3.11"
# Listing the members here is what makes `uv sync` install them.
# Workspace membership alone makes them resolvable but not installed.
dependencies = [
    "avp[conformance]",
    "avp-anthropic",
    "avp-claude-agent-sdk",
    "simple-supervisor-example",
]

[dependency-groups]
dev = [
    "pytest>=7",
    "rich>=15.0.0",
    "ruff>=0.6",
]

[tool.uv.workspace]
# Paths are relative to this pyproject.toml (python/).
members = [
    "avp",
    "sdks/avp-anthropic",
    "supervisors/simple-supervisor-example",
    "agents/avp-claude-agent-sdk",
]

# When any workspace member declares `avp`, `avp-anthropic`, etc. as a
# dependency, resolve it from the workspace rather than PyPI. Critical:
# there's an unrelated package on PyPI named `avp` (security tooling), and
# without this override `pip install` would pull it down on a fresh machine.
[tool.uv.sources]
avp = { workspace = true }
avp-anthropic = { workspace = true }
avp-claude-agent-sdk = { workspace = true }
simple-supervisor-example = { workspace = true }

[tool.uv]
# Don't try to package the workspace root itself; no source code here.
package = false
