[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aep"
version = "0.1.0"
description = "Agent Execution Protocol (AEP) — Python reference implementation. Wire types, reference runner, and conformance harness for v0.1."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6,<3",
    "jsonschema>=4.18",
    "referencing>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[project.scripts]
aep-conformance = "aep.conformance.cli:main"

[project.urls]
Homepage = "https://github.com/portofcontext/agent-execution-protocol"
Spec    = "https://github.com/portofcontext/agent-execution-protocol/tree/main/spec/v0.1"

[tool.hatch.build.targets.wheel]
packages = ["src/aep"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
