[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-execution-protocol"
version = "0.1.0"
description = "Open protocol for agent observability"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = []

[project.urls]
Homepage = "https://github.com/portofcontext/agent-execution-protocol"
Repository = "https://github.com/portofcontext/agent-execution-protocol"

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio>=0.23"]

[tool.hatch.build.targets.wheel]
packages = ["agent_execution_protocol"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
