[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "avp"
version = "0.1.0"
description = "Agent Voyager Protocol (AVP) — Python reference implementation. Wire types, reference agent, and conformance harness for v0.1."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = ["pydantic>=2.6,<3", "jsonschema>=4.18", "referencing>=0.30"]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio>=0.23", "ruff>=0.6"]
interop = [
    # Cross-validation tests: confirm our wire format is parseable by the
    # canonical Python implementations of the specs we adopt.
    "cloudevents>=1.10",
]

[project.scripts]
avp-conformance = "avp.conformance.cli:main"

[project.urls]
Homepage = "https://github.com/portofcontext/agent-voyager-project"
Spec = "https://github.com/portofcontext/agent-voyager-project/tree/main/spec/v0.1"

[tool.hatch.build.targets.wheel]
packages = ["src/avp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
