[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "avp"
version = "0.1.0"
description = "Agent Voyager Protocol (AVP) — Python reference implementation. Wire types, reference agent, and conformance harness for v0.1."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = ["pydantic>=2.6,<3"]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.6"]
conformance = [
    # CLI + case files. Bare `pip install avp` excludes these so consumers
    # who only want the wire types don't pay the dep cost.
    "typer>=0.12",
]

[project.scripts]
avp-conformance = "avp.conformance.cli:main"

[project.urls]
Homepage = "https://github.com/portofcontext/agent-voyager-project"
Spec = "https://github.com/portofcontext/agent-voyager-project/tree/main/spec/v0.1"

[tool.hatch.build.targets.wheel]
packages = ["src/avp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["archive"] # tmp
