[package]
name = "avp"
version = "0.1.0"
edition = "2021"
description = "Agent Voyager Protocol — Rust types for the v0.1 wire format."
license = "MIT"
repository = "https://github.com/portofcontext/agent-voyager-project"
readme = "README.md"
keywords = ["avp", "agents", "llm", "wire-format", "cloudevents"]
categories = ["api-bindings", "data-structures"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = [
    "serde",
    "alloc",
    "clock",
] }
uuid = { version = "1", features = ["serde", "v4"] }
regress = "0.11.1"
