[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "avp-claude-agent-sdk"
version = "0.1.1"
description = "AVP v0.1 agent for the Claude Agent SDK (Claude Code as an SDK). Observer pattern: the SDK owns its loop; this package translates the SDK's lifecycle events into AVP."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = ["agent-voyager-project==0.1.1", "claude-agent-sdk>=0.1.81"]

[tool.uv.sources]
avp = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "rich>=15.0.0",
    "ruff>=0.15.12",
    "ty>=0.0.35",
]

[project.urls]
Spec = "https://github.com/portofcontext/agent-voyager-project/tree/main/spec/v0.1"

[tool.hatch.build.targets.wheel]
packages = ["src/avp_claude_agent_sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "real_llm: tests that hit a live LLM via the Claude Agent SDK (require ANTHROPIC_API_KEY + claude CLI in PATH; cost real money)",
]
