[package]
name = "avp-goose"
version = "0.1.1"
edition = "2021"
description = "AVP connector for Block's Goose coding agent (in-process trajectory emitter)."
license = "MIT"
repository = "https://github.com/portofcontext/agent-voyager-project"

[dependencies]
avp = { path = "../../../avp/bindings/rust" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Heavy git dependency: pinned to the rev whose API this connector targets.
# We drop goose's defaults and pick the set AVP needs: TLS + keyring to drive
# hosted providers, `local-inference` for the `local` provider (in-process
# llama.cpp + GGUF straight from Hugging Face, no ollama), and `telemetry` for
# goose's internal observability hooks. Deliberately omitted: `code-mode` (AVP
# enables code execution from the meta-harness level, not per-agent),
# `aws-providers` (Bedrock/SageMaker), and `otel` (its
# opentelemetry-appender-tracing pin wants a `experimental_span_attributes`
# feature that the resolvable 0.31.x releases dropped, so it won't build at this
# goose rev; revisit when the rev bumps).
goose = { git = "https://github.com/block/goose", rev = "728d72a79f9eda1cf6d573a7885ef660b04a5622", default-features = false, features = [
    "rustls-tls",
    "system-keyring",
    "local-inference",
    "telemetry",
] }
# Goose's bundled built-in extensions (developer is a platform extension and
# always available; computercontroller/memory/tutorial/autovisualiser live here).
# We register their in-process servers into goose's BUILTIN_REGISTRY so the agent
# can load them without spawning an external `goose` binary — the embedding
# otherwise leaves that registry empty.
goose-mcp = { git = "https://github.com/block/goose", rev = "728d72a79f9eda1cf6d573a7885ef660b04a5622", default-features = false }
futures = "0.3"
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1"
# Same registry version Goose resolves, so `rmcp::model::Tool` is the same type.
rmcp = "1.7"
# Used by the eval harness to schema-validate live trajectories.
jsonschema = "0.46"
# Optional: only pulled in for the `conformance` feature, which gates the
# avp-goose-conformance binary consumed by the avp-conformance harness.
clap = { version = "4", features = ["derive"], optional = true }

[features]
# Compiles the avp-goose-conformance binary (declared below) and pulls in
# clap. Off by default so a plain `cargo build` doesn't drag clap into the
# dep graph.
conformance = ["dep:clap"]

[[bin]]
name = "avp-goose-conformance"
path = "src/bin/avp-goose-conformance.rs"
required-features = ["conformance"]
