[package]
name = "avp-goose"
version = "0.1.3"
edition = "2021"
description = "AVP connector for Block's Goose coding agent (in-process trajectory emitter)."
license = "MIT"
repository = "https://github.com/portofcontext/agent-voyager-project"

[dependencies]
avp = { path = "../../../avp/bindings/rust" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Heavy git dependency: pinned to the rev whose API this connector targets.
# We drop goose's defaults and always pull the set every consumer needs: TLS +
# keyring to drive hosted providers, and `telemetry` for goose's internal
# observability hooks. `local-inference` (in-process llama.cpp + GGUF straight
# from Hugging Face, for goose's `local` provider) is split out into our own
# default-on `local-inference` feature below, NOT pinned here: it compiles
# llama.cpp from C++ and so forces a full C++ toolchain on every consumer.
# Consumers that only drive hosted providers or a host model server (goose's
# `openai` provider over host.docker.internal) build with
# `default-features = false` to skip that compile entirely. Deliberately
# omitted: `code-mode` (AVP enables code execution from the meta-harness level,
# not per-agent), `aws-providers` (Bedrock/SageMaker), and `otel` (its
# opentelemetry-appender-tracing pin wants a `experimental_span_attributes`
# feature that the resolvable 0.31.x releases dropped, so it won't build at this
# goose rev; revisit when the rev bumps).
goose = { git = "https://github.com/block/goose", rev = "728d72a79f9eda1cf6d573a7885ef660b04a5622", default-features = false, features = [
    "rustls-tls",
    "system-keyring",
    "telemetry",
] }
# Goose's bundled built-in extensions (developer is a platform extension and
# always available; computercontroller/memory/tutorial/autovisualiser live here).
# We register their in-process servers into goose's BUILTIN_REGISTRY so the agent
# can load them without spawning an external `goose` binary — the embedding
# otherwise leaves that registry empty.
goose-mcp = { git = "https://github.com/block/goose", rev = "728d72a79f9eda1cf6d573a7885ef660b04a5622", default-features = false }
futures = "0.3"
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1"
# Same registry version Goose resolves, so `rmcp::model::Tool` is the same type.
rmcp = "1.7"
# Used by the eval harness to schema-validate live trajectories.
jsonschema = "0.46"
# Optional: only pulled in for the `conformance` feature, which gates the
# avp-goose-conformance binary consumed by the avp-conformance harness.
clap = { version = "4", features = ["derive"], optional = true }

[features]
# On by default so a plain `cargo build` (and our release binaries) keep the
# `local` provider. The C++ llama.cpp compile lives entirely behind this flag,
# so a consumer that only drives hosted providers or a host model server builds
# with `default-features = false` and never needs a C++ toolchain.
default = ["local-inference"]
# In-process local inference (goose's `local` provider): in-process llama.cpp +
# GGUF straight from Hugging Face, no ollama. Forwards to goose's own
# `local-inference`, which compiles llama.cpp from C++.
local-inference = ["goose/local-inference"]
# Compiles the avp-goose-conformance binary (declared below) and pulls in
# clap. Off by default so a plain `cargo build` doesn't drag clap into the
# dep graph.
conformance = ["dep:clap"]
# GPU-accelerated local inference: forwards to goose's `vulkan` feature (adds
# `llama-cpp-2/vulkan`) and implies `local-inference`, since the GPU backend is
# only meaningful with in-process inference compiled in. The Vulkan backend
# works against any Vulkan device the host exposes, including a virtio-gpu Venus
# device in a libkrun/krunkit microVM (Apple GPU via MoltenVK). The build needs
# a glsl compiler (glslc) for the shaders; the runtime needs libvulkan + an ICD
# (e.g. mesa's venus driver).
vulkan = ["local-inference", "goose/vulkan"]

[[bin]]
name = "avp-goose-conformance"
path = "src/bin/avp-goose-conformance.rs"
required-features = ["conformance"]
