[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "avp"
version = "0.1.0"
description = "Agent Voyager Protocol (AVP) — Python wire types (Pydantic source of truth), sinks, and resolver client for v0.1. The conformance harness ships separately as `avp-conformance`."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = ["pydantic>=2.6,<3"]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.6"]

[project.urls]
Homepage = "https://github.com/portofcontext/agent-voyager-project"
Spec = "https://github.com/portofcontext/agent-voyager-project/tree/main/spec/v0.1"

[tool.hatch.build.targets.wheel]
packages = ["src/avp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["archive"] # tmp
