[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
# Distribution name; the import package stays `avp` (mapped via hatch below).
# This package is NOT published to PyPI on its own: it is vendored into the
# `avp-cli` wheel (the one published dist) and built into the agent release
# wheels. The dist name only matters for those local/workspace builds; `avp` is
# taken on PyPI by an unrelated project, so it carries the project name instead.
name = "agent-voyager-project"
version = "0.1.0"
description = "Agent Voyager Project (AVP) Python wire types (Pydantic source of truth), sinks, and resolver client for v0.1. Vendored into the avp-cli distribution; not published standalone."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = ["pydantic>=2.6,<3"]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.6"]

[project.urls]
Homepage = "https://github.com/portofcontext/agent-voyager-project"
Spec = "https://github.com/portofcontext/agent-voyager-project/tree/main/spec/v0.1"

[tool.hatch.build.targets.wheel]
packages = ["src/avp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
