[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "avp-conformance"
version = "0.1.1"
description = "AVP v0.1 conformance harness (the `avp-conformance` CLI) + the language-agnostic test cases every conforming implementation MUST pass."
license = { text = "MIT" }
requires-python = ">=3.11"
# The harness drives agents and matches their emitted trajectories against the
# wire types, so it depends on the `avp` types package. typer powers the CLI.
dependencies = ["agent-voyager-project==0.1.1", "typer>=0.12"]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.6"]

[project.scripts]
avp-conformance = "avp_conformance.cli:main"

[project.urls]
Homepage = "https://github.com/portofcontext/agent-voyager-project"

[tool.hatch.build.targets.wheel]
# Everything under the package dir ships, including cases/ (package data the
# harness loads via importlib.resources) and the *.json/*.md docs.
packages = ["src/avp_conformance"]

[tool.pytest.ini_options]
testpaths = ["tests"]
