[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "avp-ollama"
version = "0.1.0"
description = "AVP v0.1 agent backed by a local Ollama model. Minimal-scope runner used to demonstrate supervisor-orchestrated execution-backend rescue."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "avp>=0.1,<0.2",
    "httpx>=0.27",
    "fastapi[standard]>=0.115",
    "uvicorn>=0.32",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.6"]

[project.scripts]
avp-ollama = "avp_ollama.cli:main"
avp-ollama-runner = "avp_ollama.runner:main"

[project.urls]
Spec = "https://github.com/portofcontext/agent-voyager-project/tree/main/spec/v0.1"

[tool.hatch.build.targets.wheel]
packages = ["src/avp_ollama"]

[tool.pytest.ini_options]
testpaths = ["tests"]
