[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aep-claude-agent"
version = "0.1.0"
description = "AEP v0.1 runner for the Claude Agent SDK (Claude Code as an SDK). Observer pattern: the SDK owns its loop; this package translates the SDK's lifecycle events into AEP."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "aep>=0.1,<0.2",
    "claude-agent-sdk>=0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff>=0.6",
]

[project.scripts]
aep-claude-agent = "aep_claude_agent.cli:main"

[project.urls]
Spec    = "https://github.com/portofcontext/agent-execution-protocol/tree/main/spec/v0.1"

[tool.hatch.build.targets.wheel]
packages = ["src/aep_claude_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "real_llm: tests that hit a live LLM via the Claude Agent SDK (require ANTHROPIC_API_KEY + claude CLI in PATH; cost real money)",
]
