[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-agent-sdk-aep"
version = "0.1.0"
description = "AEP runner — wraps Claude Agent SDK to emit agent execution protocol events"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1",
    "agent-execution-protocol>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio>=0.23"]

[project.scripts]
claude-aep-runner = "claude_agent_sdk_aep._run:run_from_stdin"

[tool.hatch.build.targets.wheel]
packages = ["claude_agent_sdk_aep"]

[tool.uv.sources]
agent-execution-protocol = { path = "../../agent-execution-protocol", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["slow: requires ANTHROPIC_API_KEY and makes real API calls"]
