[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "avp-anthropic"
version = "0.1.0"
description = "AVP v0.1 SDK adapter for the Anthropic Messages API. Provides a ModelDriver, a TracedClient, and Commission-to-API translators. No agent loop, no built-in tools: those belong to the agent that wraps this SDK."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = ["avp>=0.1,<0.2", "anthropic>=0.40,<1"]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.6"]

[project.urls]
Spec = "https://github.com/portofcontext/agent-voyage-protocol/tree/main/spec/v0.1"

[tool.hatch.build.targets.wheel]
packages = ["src/avp_anthropic"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "real_llm: tests that hit the real Anthropic API (requires ANTHROPIC_API_KEY); deselect by default with -m 'not real_llm'",
]
