[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simple-supervisor-example"
version = "0.1.0"
description = "Worked example of an AVP v0.1 supervisor. Builds Configs from category profiles, spawns an agent subprocess, observes the trajectory, and surfaces the three classes of facts. Intended as a stepping stone before building a real (DDD) supervisor."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = ["avp==0.1.0"]

[project.optional-dependencies]
anthropic = ["avp-anthropic==0.1.0"]
claude-agent = ["avp-claude-agent==0.1.0"]
dev = ["pytest>=7", "ruff>=0.6"]

[project.scripts]
simple-supervisor = "simple_supervisor.cli:main"

[project.urls]
Spec = "https://github.com/portofcontext/agent-execution-protocol/tree/main/spec/v0.1"

[tool.hatch.build.targets.wheel]
packages = ["src/simple_supervisor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
